--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.439.0",
-    "mongodb": "^6.9.0",
-    "next": "^14.2.8",
-    "react": "^18.3.1",
+    "next": "14.2.8",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
