--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.3
-pluggy==1.5.0
-pydantic==2.9.2
-pydantic_core==2.23.4
+asgiref==3.8.1
+certifi==2024.8.30
+dnspython==2.7.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-WTF==1.2.2
+geojson==3.1.0
+numpy==2.1.3
+pandas==2.2.3
 pymongo==4.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
-Werkzeug==3.0.6
-geojson
-flask-cors
-pytest
+six==1.16.0
+tzdata==2024.2
+urllib3==2.2.3
+webencodings==0.5.1
+Werkzeug==3.1.3
+WTForms==3.2.1
