--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
-certifi==2024.8.30
+certifi==2024.7.4
 dnspython==2.7.0
-Flask==3.1.0
+Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-WTF==1.2.2
 geojson==3.1.0
@@ -16,5 +16,15 @@ six==1.16.0
 tzdata==2024.2
 urllib3==2.2.3
 webencodings==0.5.1
-Werkzeug==3.1.3
+Werkzeug==3.0.6
 WTForms==3.2.1
+charset-normalizer==3.3.2
+click==8.1.7
+email_validator==2.2.0
+graphene==3.3
+graphql-core==3.2.3
+graphql-relay==3.2.0
+gunicorn==23.0.0
+pluggy==1.5.0
+pydantic==2.9.2
+pydantic_core==2.23.4
